--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,59 @@ nav .nav-right-section img {
 nav .nav-right-section img:hover {
     background-color: rgba(60,64,67,0.08);
 }
+main {
+    height: calc(100vh - 155px);
+    min-height: 350px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+main .main-logo {
+    width: 100%;
+    max-width: 530px;
+    margin-bottom: 35px;
+}
+main .main-logo img {
+    width: 272px;
+}
+main .main-input {
+    width: 100%;
+    max-width: 580px;
+    margin-bottom: 35px;
+}
+main .main-input-container {
+    width: inherit;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main .main-input input {
+    width: 500px;
+    height: 42px;
+    border: none;
+    outline: none;
+}
+section .main-input-container .material-icons-outlined {
+    color: #9aa0a6;
+    padding: 0 15px;
+}
+main .main-buttons {
+    display: flex;
+    margin-bottom: 35px;
+}
+main .main-languaje {
+    font-size: 1.3rem;
+}
+main .main-languaje a{
+    margin: 0 7px;
+}
+
+footer {
+    width: 100%;
+    height: 95px;
+    background-color: #f2f2f2;
+}
