--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ nav .nav-right-section img:hover {
     background-color: rgba(60,64,67,0.08);
 }
 main {
-    height: calc(100vh - 155px);
+    height: calc(100vh - 154px);
     min-height: 300px;
     display:flex;
     flex-direction: column;
@@ -89,6 +89,10 @@ main .main-input-container {
     justify-content: center;
     align-items: center;
 }
+main .main-input-container:hover {
+    border: 1px solid white;
+    box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+}
 main .main-input input {
     width: 500px;
     height: 42px;
@@ -103,15 +107,55 @@ main .main-buttons {
     display: flex;
     margin-bottom: 35px;
 }
+main .main-buttons button {
+    margin: 0 6px;
+    padding: 10px 20px;
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    outline: none;
+}
+main .main-buttons button:hover {
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    border: 1px solid #dadce0;
+}
+main .main-buttons button:focus {
+    border: 1px solid #4285f4;
+    outline: none;
+}
 main .main-languaje {
     font-size: 1.3rem;
+    margin-bottom: 100px;
 }
 main .main-languaje a{
     margin: 0 7px;
 }
-
 footer {
     width: 100%;
-    height: 95px;
     background-color: #f2f2f2;
+}
+footer .footer-country {
+    height: 50%;
+    padding: 15px 30px;
+    font-size: 1.5rem;
+    color: rgba(0,0,0,.54);
+    border-bottom: 1px solid #dadce0;
+}
+footer .footer-links {
+    display: flex;
+    flex-wrap: wrap;
+    height: 50%;
+    justify-content: space-between;
+    padding: 15px 30px;
+    font-size: 1.4rem;
+    text-align: center;
+}
+footer .footer-links a {
+    color: rgba(0,0,0,.54);
+    padding: 0 10px;
+}
+@media (max-width:1200px) {
+    footer .footer-links {
+        justify-content: space-evenly;
+    }
 }
