--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ main .main-input-container {
     align-items: center;
 }
 main .main-input-container:hover {
-    border: 1px solid white;
+    border-color: white;
     box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
 }
 main .main-input input {
@@ -149,6 +149,11 @@ footer .footer-links {
     padding: 15px 30px;
     font-size: 1.4rem;
     text-align: center;
+}
+footer .footer-links ul {
+    display: inline-flex;
+    list-style: none;
+    padding-left: 0;
 }
 footer .footer-links a {
     color: rgba(0,0,0,.54);
